# TrailScout

./: README.md  docker-compose.yml  production.yml
.github/ISSUE_TEMPLATE/: feature_request.md  user_story.md
.github/workflows/: rust.yml
backend/: .gitignore  Cargo.toml  Dockerfile  config.json  edge_type_config.json  filter.txt  make_osm_filter.py  preprocess_osm.py  sights_config.json
backend/algorithm_api/: .gitignore  Cargo.toml
backend/algorithm_api/src/: lib.rs
backend/algorithm_api/src/api/: greedy.rs  mod.rs  route_provider.rs
backend/data_api/: .gitignore  Cargo.toml
backend/data_api/src/: lib.rs  main.rs
backend/data_api/src/api/: graph.rs  mod.rs  osm_graph_creator.rs
backend/data_api/src/creator/: mod.rs  osm_graph_creator.rs
backend/data_api/tests/: general_integration_tests.rs
backend/graph_creator_osm/: .gitignore  Cargo.toml
backend/graph_creator_osm/src/: main.rs
backend/osm_graphs/: .gitignore
backend/server/: Cargo.toml  Dockerfile
backend/server/src/: config.json  main.rs  route_provider.rs
backend/src/: bench.rs  graph_creator.rs  lib.rs  route_provider.rs  server.rs
backend/src/algorithm/: greedy.rs  mod.rs  sa_lin_yu.rs
backend/src/data/: graph.rs  mod.rs  osm_graph_creator.rs
backend/src/server_utils/: custom_errors.rs  mod.rs  requests.rs
backend/src/utils/: binary_minheap.rs  dijkstra.rs  mod.rs  test_setup.rs
backend/tests/: integrated_tests.rs
backend/tests/common/: mod.rs
backend/tests_data/: bremen-compact.osm.pbf  stgcenter.pbf  tokio.pbf
backend/tests_data/output/: test-stgcenter.fmi
docs/: Architektur.drawio  DatenApiDiagram.drawio  Trailsuche.drawio
gui/: .gitignore  Dockerfile  README.md  angular.json  package-lock.json  package.json  sights.json  tsconfig.json
gui/src/: styles.scss
gui/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  types.utils.ts
gui/src/app/components/: components.module.ts  icons.ts
gui/src/app/components/map-container/: icons.ts  map-container.component.html  map-container.component.scss  map-container.component.ts
gui/src/app/components/navigation-taskbar/: navigation-taskbar.component.html  navigation-taskbar.component.scss  navigation-taskbar.component.ts  navigation-taskbar.module.ts
gui/src/app/components/route-tracker/: route-tracker.component.html  route-tracker.component.scss  route-tracker.component.ts
gui/src/app/components/screenshot-carousel/: screenshot-carousel.component.html  screenshot-carousel.component.scss  screenshot-carousel.component.ts
gui/src/app/components/settings-taskbar/: settings-taskbar.component.html  settings-taskbar.component.scss  settings-taskbar.component.ts
gui/src/app/components/toast/: toast.component.html  toast.component.ts
gui/src/app/data/: Category.ts  Sight.ts
gui/src/app/desktop/: desktop.module.ts
gui/src/app/desktop/landing-page/: landing-page.component.html  landing-page.component.scss  (+1 more)
gui/src/app/pages/: pages.module.ts
gui/src/app/services/: application-state.service.ts  cookie-handler.service.ts  gps.service.ts  json-handler.service.ts  map.service.ts  route.service.ts  sights-service.service.spec.ts  sights-service.service.ts  toast.service.ts  wikidata-handler.service.ts
gui/src/environments/: environment.prod.ts  environment.ts
postman/: Trailscout.postman_collection.json
server/: Cargo.toml
server/src/: main.rs
src/app/desktop/: desktop.module.ts
(+25 files in other folders)
