[package]
name = "trailscout_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trailscout_lib"
path = "src/lib.rs"

[[bin]]
name = "trailscout_service"
path = "src/server.rs"

[[bin]]
name = "osm_graph_creator"
path = "src/graph_creator.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6.1"
actix-cors = "0.6.1"
chrono = "0.4"
futures = "0.3"
derive_more = "0.99.17"
itertools = "0.10.2"
json = "0.12.4"
osmpbf = "0.2"
pathfinding = "3.0.13"
rand = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-enum-str = "0.2.5"
log = "0.4.17"
env_logger = "0.8.4"
crossbeam = "0.8"
rayon = "1.5"
file_diff = "1.0.0"

[dev-dependencies]
once_cell = "1.13.0"