[package]
name = "algorithm_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal dependencies
data_api = { path = "../data_api" }
# external dependencies
derive_more = "0.99.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
pathfinding = "2.0"