[package]
name = "data_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "data_api"
path = "src/lib.rs"

[[bin]]
name = "creator"
path = "src/main.rs"

[dependencies]
osmpbf = "0.2"
derive_more = "0.99.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"