[package]
name = "data_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "data_api"
path = "src/lib.rs"

[[bin]]
name = "creator"
path = "src/main.rs"

[dependencies]
osmpbf = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-enum-str = "0.2"
rand = "0.8.4"