[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal dependencies
data_api = { path = "../data_api" }
algorithm_api = { path = "../algorithm_api" }
# external dependencies
actix-web = "4"
actix-files = "0.6"
log = "0.4"
serde = { version = "1.0.137", features = ["derive"] }
futures = "0.3.21"
json = "0.12.4"
serde_json = "1.0"
chrono = "0.4"
